Fix: Change image file path in index.html and add gif, webP, ico extensions to gulpfile.js

--- a/dest/index.html
+++ b/dest/index.html
@@ -14,10 +14,10 @@
 		<meta property="og:title" content="トップページ" />
 		<meta property="og:site_name" content="サイト名" /> -->
 
-		<!-- <meta property="og:image" content="./assets/img/ogp.jpg"> -->
+		<!-- <meta property="og:image" content="../img/ogp.jpg"> -->
 
-		<!-- <link rel="apple-touch-icon" href="./assets/img/ico_favicon.png"> -->
-		<!-- <link rel="shortcut icon" href="./assets/img/ico_favicon.ico"> -->
+		<!-- <link rel="apple-touch-icon" href="../img/ico_favicon.png" /> -->
+		<!-- <link rel="shortcut icon" href="../img/ico_favicon.ico"> -->
 
 		<!-- google Fonts -->
 
