fix: fix midia screen in _minxin.scss, fix breakpoint in _setting.scss

--- a/dest/index.html
+++ b/dest/index.html
@@ -16,8 +16,8 @@
 
 		<!-- <meta property="og:image" content="../img/ogp.jpg"> -->
 
-		<!-- <link rel="apple-touch-icon" href="../img/ico_favicon.png" /> -->
-		<!-- <link rel="shortcut icon" href="../img/ico_favicon.ico"> -->
+		<!-- <link rel="apple-touch-icon" href="../img/favicon.png" /> -->
+		<!-- <link rel="shortcut icon" href="../img/favicon.ico"> -->
 
 		<!-- google Fonts -->
 
