fix: fix index.htnl file

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,18 +28,9 @@
 	</head>
 	<body>
 		<header class="l-header">
-			<h1>
-				<div class="header-logo">
-					<img
-						src="../img/sample_1.jpg"
-						alt=""
-						srcset=""
-						width="5184"
-						height="3296"
-					/>
-				</div>
-				<a href="">
-					<span>header</span>
+			<h1 class="l-header-logo">
+				<a href="#">
+					<img src="../img/sample_1.jpg" alt="" />
 				</a>
 			</h1>
 
